@@ -70,7 +70,7 @@ public class NLS {
     String str = getLocalizedMessage(key, locale);
 
     if (args.length > 0) {
-      str = MessageFormat.format(str, args);
+      str = new MessageFormat(str, Locale.ROOT).format(args);
     }
 
     return str;
